$Id$

2016-08-17  Christian Franke  <franke@computer.org>

	AUTHORS: Add Song Liu.

	smartctl.cpp: Reduce scope of 'persistent' flag
	(cppcheck: variableScope).

2016-08-17  Song Liu  <songliubraving@fb.com>

	ataprint.cpp, ataprint.h, smartctl.cpp, smartctl.8.in:
	Add persistent option ',p' to '-s wcreorder,on|off' (ticket #726).

	atacmds.cpp, atacmds.h, ataprint.cpp, ataprint.h, smartctl.cpp,
	smartctl.8.in: Add ability to control ATA drive write cache through
	SCT Feature control.  The new smartctl options are
	'-s wcache-sct,ata|on|off[,p]' and '-g wcache-sct' (ticket #723).

2016-08-06  Christian Franke  <franke@computer.org>

	os_win32.cpp: Add Windows 10 build number to get_os_version_str().

	Update MSVC10 (VS2010) for VC14 (VS2015):
	os_win32/vc14/*: Move from os_win32/vc10/*.
	os_win32/vc14/*.vcxproj: Update for VC14.
	Remove '__func__' workaround (revert r4225).
	Makefile.am: Rename and update config-vc14 target.
	utility.cpp: Add workaround for missing 'tzname'.

	drivedb.h:
	- OCZ/Toshiba Trion SSDs: Rename, add TOSHIBA-TR150 (ticket #722)
	- HGST Ultrastar 7K6000 (ticket #708)
	- HGST Ultrastar He10
	- Seagate Desktop HDD.15: 6TB, 8TB
	- Seagate Enterprise Capacity 3.5 HDD: 8TB, 10TB (ticket #717),
	  attribute 240
	- Seagate SV35: 4TB
	- Western Digital Gold (ticket #711)
	- USB: LaCie (0x059f:0x1075) (ticket #718)
	- USB: Seagate Expansion External (0x0bc2:0x3322) (ticket #706)
	- USB: Seagate FreeAgent GoFlex (0x0bc2:0x5030) (ticket #720)
	- USB: Seagate Backup Plus Desktop (0x0bc2:0xab34) (ticket #700)

2016-05-31  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Intel 311/313 Series SSDs: mSATA, *H (HP) variant
	- Intel 520 Series SSDs: *L (Lenovo) variant
	- HGST Ultrastar He6/He8: attribute 22 "Helium_Level"
	- Western Digital Red: 8TB, attribute 22 "Helium_Level"
	- USB: WD My Passport Ultra (0x1058:0x0837) (ticket #696)
	- USB: WD My Passport (0x1058:0x083a)
	- USB: WD My Book (0x1058:0x111d)
